# Z0_AsBinary

./: .gitignore  AGENTS.md  KHINCHIN.md  LEGACY_REFERENCE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: QLFQoSPlusHumans.md  codata-2014-pre-2019-bits-only.txt  codata-2014-pre-2019.md  index.html  information-first-position.html  legacy-genetic-sequence-analysis.md  pion-bit-interpretation-note.md  walter-bishop.html  z0-binary-structure.html  z0-binary-structure.md  z0-encounter-sweep.html  z0-zfa-runnable-object.html
docs/codata/: README.md  pre-2019-codata-2014-binary.md  pre-2019-codata-2014-source.md
docs/experiments/: closure-register-machine.md  em-closure-receipt.md
docs/references/: accelerator-detector-em-receipts.md  boltzmann-gibbs-wheeler-landauer-bennett-receipts.md  boscovich-point-force-receipts.md  computational-process-lineage.md  electron-chromodyne-knock-on.md  electron-minimal-stable-charged-spinor-closure.html  facebook-2026-06-15-closure-gravity-source.md  fine-structure-alpha-genezip-question.md  fundamental-pi-qlf-apery-carryback.md  fundamentalPi.md  fundamentalpi-elastic-hashing-firebreaks.md  gell-mann-classification-receipts.md  laplace-potential-determinism-receipts.md  leibniz-binary-yinyang-process-receipt.md  maxwell-after-mead-wolfram-thooft.md  maxwell-machine-completion-note.md  noether-symmetry-conservation-receipts.md  poynting-heaviside-hertz-lorentz-em-receipts.md  (+11 more)
tests/: test_closure.py  test_core.py  test_qlf_admissibility.py  test_zfa.py
tools/: build_zfa_probe_report.py
(+12 files in other folders)
