[project]
name = "characteristic-impedance"
version = "0.1.0"
description = "Python research instrument for characteristic impedance as an information substrate"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Allen E. Francom"}
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
